# src/dtos/auth/RegisterResponseDto.ts
@@ -1,0 +1,9 @@
+import { TenantResponseDto } from "../tenent/TenantResponseDto";
+import { ResponseUserDto } from "../user/ResponseUserDto";
+
+export class ResponseRegisterDto {
+
+    tenant!: TenantResponseDto;
+
+    user!: ResponseUserDto;
+}
