# src/swagger/swagger.json
@@ -7,6 +7,37 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
+			"TenantResponseDto": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"name": {
+						"type": "string"
+					},
+					"displayName": {
+						"type": "string"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
+					}
+				},
+				"required": [
+					"id",
+					"name",
+					"displayName",
+					"createdAt",
+					"updatedAt"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"ResponseRoleDto": {
 				"properties": {
 					"id": {
@@ -65,6 +96,98 @@
 					"email",
 					"roles",
 					"createdAt"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ResponseRegisterDto": {
+				"properties": {
+					"tenant": {
+						"$ref": "#/components/schemas/TenantResponseDto"
+					},
+					"user": {
+						"$ref": "#/components/schemas/ResponseUserDto"
+					}
+				},
+				"required": [
+					"tenant",
+					"user"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ResponseDto_ResponseRegisterDto-or-null_": {
+				"properties": {
+					"Error": {},
+					"Result": {
+						"allOf": [
+							{
+								"$ref": "#/components/schemas/ResponseRegisterDto"
+							}
+						],
+						"nullable": true
+					},
+					"Success": {
+						"type": "boolean"
+					},
+					"TargetUrl": {
+						"type": "string",
+						"nullable": true
+					},
+					"UnAuthorizedRequest": {
+						"type": "boolean"
+					},
+					"StatusCode": {
+						"type": "number",
+						"format": "double"
+					},
+					"LogError": {}
+				},
+				"required": [
+					"Error",
+					"Success",
+					"UnAuthorizedRequest"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"RegisterDto": {
+				"properties": {
+					"companyName": {
+						"type": "string"
+					},
+					"companyDisplayName": {
+						"type": "string"
+					},
+					"firstName": {
+						"type": "string"
+					},
+					"lastName": {
+						"type": "string"
+					},
+					"username": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					},
+					"roleId": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"companyName",
+					"companyDisplayName",
+					"firstName",
+					"lastName",
+					"username",
+					"email",
+					"password",
+					"roleId"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -321,37 +444,6 @@
 					"name",
 					"email",
 					"password"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"TenantResponseDto": {
-				"properties": {
-					"id": {
-						"type": "number",
-						"format": "double"
-					},
-					"name": {
-						"type": "string"
-					},
-					"displayName": {
-						"type": "string"
-					},
-					"createdAt": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"updatedAt": {
-						"type": "string",
-						"format": "date-time"
-					}
-				},
-				"required": [
-					"id",
-					"name",
-					"displayName",
-					"createdAt",
-					"updatedAt"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -914,6 +1006,38 @@
 		"contact": {}
 	},
 	"paths": {
+		"/users/register": {
+			"post": {
+				"operationId": "Register",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ResponseDto_ResponseRegisterDto-or-null_"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"User"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/RegisterDto"
+							}
+						}
+					}
+				}
+			}
+		},
 		"/users": {
 			"post": {
 				"operationId": "CreateUser",
